@@ -3037,11 +3037,11 @@ $n$-th power modulo \kbd{p}, and $0$ otherwise.
 \typ{INT}s, and \kbd{p} is assumed to be prime. Return \kbd{NULL}
 if \kbd{x} is not a quadratic residue modulo \kbd{p}.
 
-\fun{GEN}{Fp_sqrtn}{GEN x, GEN n, GEN p, GEN *zn} returns an \kbd{n}-th
-root of $\kbd{x}$ modulo \kbd{p} (smallest non-negative residue), where
-\kbd{x}, \kbd{n}, \kbd{p} are \typ{INT}s, and \kbd{p} is assumed to be prime.
-Return \kbd{NULL} if \kbd{x} is not an \kbd{n}-th power residue. Otherwise,
-if \kbd{zn} is non-\kbd{NULL} set it to a primitive \kbd{n}-th root of $1$.
+\fun{GEN}{Fp_sqrtn}{GEN a, GEN n, GEN p, GEN *zn}
+returns \kbd{NULL} if $a$ is not an $n$-th power residue mod $p$.
+Otherwise, returns an $n$-th root of $a$; if \kbd{zn} is non-\kbd{NULL}
+set it to a primitive $m$-th root of 1, $m = \gcd(p-1,n)$ allowing to compute
+all $m$ solutions in $\F_p$ of the equation $x^n = a$.
 
 \fun{GEN}{Zn_sqrt}{GEN x, GEN n} returns one of the square roots of \kbd{x}
 modulo \kbd{n} (possibly not prime), where \kbd{x} is a \typ{INT} and \kbd{n}
@@ -4191,11 +4191,12 @@ and $0$ otherwise. Assumes that \kbd{T} is irreducible mod \kbd{p}.
 \fun{GEN}{FpXQ_sqrt}{GEN x, GEN T, GEN p} returns a square root of \kbd{x}.
 Return \kbd{NULL} if \kbd{x} is not a square.
 
-\fun{GEN}{FpXQ_sqrtn}{GEN x, GEN n, GEN T, GEN p, GEN *zn} returns an
-\kbd{n}-th root of $\kbd{x}$.  Return \kbd{NULL} if \kbd{x} is not an
-\kbd{n}-th power residue. Otherwise, if \kbd{zn} is non-\kbd{NULL} set it to
-a primitive \kbd{n}-th root of the unity. Assumes that \kbd{T} is irreducible
-mod \kbd{p}.
+\fun{GEN}{FpXQ_sqrtn}{GEN x, GEN n, GEN T, GEN p, GEN *zn}
+Let $T$be irreducible mod $p$ and $q = p^{\deg T}$; returns \kbd{NULL} if $a$
+is not an $n$-th power residue mod $p$. Otherwise, returns an $n$-th root of
+$a$; if \kbd{zn} is non-\kbd{NULL} set it to a primitive $m$-th root of $1$
+in $\F_q$, $m = \gcd(q-1,n)$ allowing to compute all $m$ solutions in $\F_q$
+of the equation $x^n = a$.
 
 \subsec{\kbd{Fq}}
 
@@ -4252,11 +4253,8 @@ and $0$ otherwise. Assumes that \kbd{T} is irreducible mod \kbd{p}. $T =
 \fun{GEN}{Fq_sqrt}{GEN x, GEN T, GEN p} returns a square root of \kbd{x}.
 Return \kbd{NULL} if \kbd{x} is not a square.
 
-\fun{GEN}{Fq_sqrtn}{GEN x, GEN n, GEN T, GEN p, GEN *zn} returns an
-\kbd{n}-th root of $\kbd{x}$.  Return \kbd{NULL} if \kbd{x} is not an
-\kbd{n}-th power residue. Otherwise, if \kbd{zn} is non-\kbd{NULL} set it to
-a primitive \kbd{n}-th root of the unity. Assumes that \kbd{T} is irreducible
-mod \kbd{p}.
+\fun{GEN}{Fq_sqrtn}{GEN a, GEN n, GEN T, GEN p, GEN *zn}
+as \tet{FpXQ_sqrtn}.
 
 \fun{GEN}{FpXQ_charpoly}{GEN x, GEN T, GEN p} returns the characteristic
 polynomial of \kbd{x}
@@ -4912,11 +4910,8 @@ order \kbd{ord} in the field $F_p[X]/(T)$. Return $e$ such that $a^e=g$. If
 $e$ does not exists, the result is currently undefined. Assumes that \kbd{T}
 is irreducible mod \kbd{p}.
 
-\fun{GEN}{Flxq_sqrtn}{GEN x, GEN n, GEN T, ulong p, GEN *zn} returns an
-\kbd{n}-th root of $\kbd{x}$.  Return \kbd{NULL} if \kbd{x} is not an
-\kbd{n}-th power residue. Otherwise, if \kbd{zn} is non-\kbd{NULL} set it to
-a primitive \kbd{n}-th root of $1$. Assumes that \kbd{T} is irreducible mod
-\kbd{p}.
+\fun{GEN}{Flxq_sqrtn}{GEN x, GEN n, GEN T, ulong p, GEN *zn} as
+\tet{FpXQ_sqrtn}.
 
 \fun{GEN}{Flxq_sqrt}{GEN x, GEN T, ulong p} returns a square root of \kbd{x}.
 Return \kbd{NULL} if \kbd{x} is not a square.
