@@ -660,10 +660,9 @@ Fq_sqrtn(GEN x, GEN n, GEN T, GEN p, GEN *zeta)
 {
   if (typ(x) == t_INT)
   {
-    long d;
     if (!T) return Fp_sqrtn(x,n,p,zeta);
-    d = get_FpX_degree(T);
-    if (ugcd(umodiu(n,d),d) == 1) return Fp_sqrtn(x,n,p,zeta);
+    /* if p=1(mod n) both the root and zeta exist in Fp */
+    if (equali1(modii(p,n))) return Fp_sqrtn(x,n,p,zeta);
     x = scalarpol_shallow(x, get_FpX_var(T));
   }
   return FpXQ_sqrtn(x,n,T,p,zeta);
